// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chatMessages > renders with assistant correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <div data-slot="leading" class=""><span data-slot="root"><span class="iconify i-lucide:bot" aria-hidden="true" data-slot="icon"></span></span></div>
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with class correctly 1`] = `
"<div data-slot="root" class="max-w-3xl" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with compact correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with content slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Content slot</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Content slot</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with default slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">Default slot
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with files slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with indicator slot correctly 1`] = `
"<div data-status="submitted" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Indicator slot</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!---->
</div>"
`;

exports[`chatMessages > renders with messages correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with status error correctly 1`] = `
"<div data-status="error" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with status ready correctly 1`] = `
"<div data-status="ready" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with status streaming correctly 1`] = `
"<div data-status="streaming" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with status submitted correctly 1`] = `
"<div data-status="submitted" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">
          <div data-slot="indicator" class=""><span></span><span></span><span></span></div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!---->
</div>"
`;

exports[`chatMessages > renders with ui correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with user correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <div data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></div>
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`chatMessages > renders with viewport slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">Hello, how are you?</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="content" class="">I am fine, thank you!</div>
        <!--v-if-->
      </div>
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;
